# stuff

./: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
app/: main.py  run.py
app/api/: __init__.py  api_di.py  video_router.py  video_routes.py
app/core/: app.py
app/ml/: pipeline.py
app/services/: video_service.py
app/storage/: memory_storage.py
