[project]
name = "fastapiml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "movinet-pytorch",
    "opencv-python>=4.12.0.88",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.6"
]

[tool.uv.sources]
movinet-pytorch = { git = "https://github.com/Atze00/MoViNet-pytorch.git" }